# tdx2db

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
.claude/skills/tdx2db-query/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: python-package.yml
scripts/: add_constraints.sql  add_constraints_mysql.sql  backfill_minute_gaps.py  migrate_add_adj_factor.sql  migrate_block_relation.sql  migrate_stock_info_capital.sql
src/: __init__.py  cli.py  config.py  logger.py  processor.py  reader.py  storage.py
src/tdx2db/: __init__.py  cli.py  config.py  downloader.py  processor.py  reader.py  smb_accessor.py  storage.py
tdx2db/: __init__.py  blocks.py  cli.py  config.py  logger.py  processor.py  reader.py  storage.py
tests/: test_blocks.py  test_cli.py  test_config.py  test_daily.py  test_download.py  test_float_capital.py  test_processor.py  test_reader.py  test_smb.py  test_smoke.py  test_storage.py
tests/fixtures/: make_fixtures.py  real_sh688001.day  real_sz000001.day  real_sz000001.lc5  sh688001.day  sz000001.day  sz000001.lc5
