[tool.poetry]
name = "tdx2db"
version = "0.2.0"
description = "读取本地通达信(TDX)股票数据，增量同步到 PostgreSQL/MySQL/SQLite"
authors = ["我如此拉风 <xbfighting@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pytdx = "^1.72"
pandas = "^2.2.3"
sqlalchemy = "^2.0.40"
tqdm = "^4.67.1"
python-dotenv = "^1.1.0"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
